--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>fsefsefwefwe
+    <title>3D Space Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div id="portfolio-container">
+        <h1>My Portfolio</h1>
+        <!-- Add your portfolio content here -->
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
