--- a/index.html
+++ b/index.html
@@ -1,183 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>arjunkd</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;600;700&display=swap');
+        body, html {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            width: 100%;
+            height: 100%;
+            background-color: black;
+            font-family: Arial, sans-serif;
+            color: white;
+        }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Fira Sans', sans-serif;
-}
+        #website-container {
+            display: none; /* Hide initially, will be shown after space travel */
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            z-index: 1;
+        }
 
-body{
-    background-color: #eee;
-    padding: 0 20px;
-}
+        #website-container h1 {
+            font-size: 3em;
+            margin-bottom: 20px;
+        }
 
-.container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    min-height: 100vh;
-    margin-top: 20px;
-}
+        #website-container p {
+            font-size: 1.5em;
+        }
 
-header{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+        #website-container a {
+            color: #ffcc00;
+            text-decoration: none;
+            font-size: 2em;
+            display: inline-block;
+            margin-top: 20px;
+            border: 2px solid #ffcc00;
+            padding: 10px 20px;
+            transition: all 0.3s ease;
+        }
 
-h1{
-    color: #616161;
-    font-size: 42px;
-    text-transform: uppercase;
-    text-align: center;
-    margin-bottom: 16px;
-}
-
-header p{
-    color: #616161;
-    font-weight: bold;
-}
-
-.search-box{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 6px;
-    width: 100%;
-    overflow: hidden;
-    max-width: 720px;
-    margin-bottom: 16px;
-    transition: all 0.3s ease;
-}
-
-.search-box input{
-    display: block;
-    appearance: none;
-    -webkit-appearance: none;
-    outline: none;
-    border: none;
-    padding: 16px;
-    border-radius: 12px;
-    width: 100%;
-    transition: all 0.3s ease;
-}
-
-.search-box:focus-within{
-    box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.2);
-    transform: translateY(-3px);
-}
-
-.results{
-    max-width: 768px;
-    margin: 0 auto;
-}
-
-.result{
-    width: 100%;
-    padding: 16px;
-    margin: 16px 0;
-    background-color: #fff;
-    border-radius: 14px;
-    transition: all 0.3s ease;
-}
-
-.result:hover{
-    box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.2);
-}
-
-.result h3{
-    color: #616161;
-    font-size: 28px;
-    margin-bottom: 16px;
-}
-
-.result p{
-    color: #313131;
-    font-size: 18px;
-    margin-bottom: 16px;
-}
-
-.result a{
-    display: inline-block;
-    padding: 12px;
-    width: 100%;
-    background-color: #5c6bc0;
-    color: #fff;
-    text-decoration: none;
-    text-align: center;
-    font-weight: 700;
-    border-radius: 12px;
-    transition: all 0.3s ease;
-}
-
-.result a:hover{
-    background-color: #3949ab;
-}
+        #website-container a:hover {
+            background-color: hsl(0, 0%, 100%);
+            color: black;
+        }
+       
     </style>
-    <title>Day #60 - Wikipedia Searcher | AsmrProg</title>
 </head>
-
 <body>
-
-    <div class="container">
-        <header>
-            <h1>Wiki Searcher</h1>
-            <form class="search-box">
-                <input type="search" placeholder="What do you want to search?">
-            </form>
-            <p>Results Count : 0</p>
-        </header>
-        <div class="results"></div>
+    <div id="website-container">
+        <h1>ArjunKD Inc.</h1>
+        <p>physicality is everything so wake up to reality</p>
+        <a href="if.html">Enter</a>
+      
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-    const form = document.querySelector('.search-box');
-    const input = form.querySelector('input[type="search"]');
-    const resultsContainer = document.querySelector('.results');
-    const resultsCounter = document.querySelector('header p');
+        // Setup
+        let scene = new THREE.Scene();
+        let camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 5000);
+        let renderer = new THREE.WebGLRenderer();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild(renderer.domElement);
 
-    form.addEventListener('submit', function (event) {
-        event.preventDefault();
-        const searchTerm = input.value;
-        if (searchTerm) {
-            searchWikipedia(searchTerm);
-        }
-    });
-
-    function searchWikipedia(searchTerm) {
-        const url = `https://en.wikipedia.org/w/api.php?action=query&list=search&prop=info&inprop=url&utf8=&format=json&origin=*&srlimit=500&srsearch=${encodeURIComponent(searchTerm)}`;
-
-        fetch(url).then(response => response.json()).then(data => {
-            displayResults(data.query.search);
-        }).catch(error => alert('Error : ' + error));
-    }
-
-    function displayResults(results) {
-        resultsContainer.innerHTML = '';
-        resultsCounter.textContent = `Results Count : ${results.length}`;
-        results.forEach(result => {
-            const resultElement = document.createElement('div');
-            resultElement.className = 'result';
-            resultElement.innerHTML = `
-
-            <h3>${result.title}</h3>
-            <p>${result.snippet}</p>
-            <a href="https://en.wikipedia.org/?curid=${result.pageid}" target="_blank">Read More</a>
-            `;
-            resultsContainer.appendChild(resultElement);
+        // Create stars
+        let starGeometry = new THREE.BufferGeometry();
+        let starMaterial = new THREE.PointsMaterial({ 
+            color: 0xffffff,
+            size: 3,
+            sizeAttenuation: false,
+            map: new THREE.TextureLoader().load('https://threejs.org/examples/textures/sprites/disc.png'),
+            transparent: true
         });
-    }
-});
+        let starVertices = [];
+        for (let i = 0; i < 20000; i++) {
+            let x = (Math.random() - 0.5) * 10000;
+            let y = (Math.random() - 0.5) * 10000;
+            let z = (Math.random() - 0.5) * 10000;
+            starVertices.push(x, y, z);
+        }
+        starGeometry.setAttribute('position', new THREE.Float32BufferAttribute(starVertices, 3));
+        let stars = new THREE.Points(starGeometry, starMaterial);
+        scene.add(stars);
+
+        // Create galaxies
+        function createGalaxy() {
+            let galaxyGeometry = new THREE.SphereGeometry(5, 32, 32);
+            let galaxyMaterial = new THREE.MeshBasicMaterial({ color: 0xaaaaaa });
+            let galaxy = new THREE.Mesh(galaxyGeometry, galaxyMaterial);
+            galaxy.position.set(
+                (Math.random() - 0.5) * 15000,
+                (Math.random() - 0.5) * 15000,
+                (Math.random() - 0.5) * 15000
+            );
+            return galaxy;
+        }
+
+        for (let i = 0; i < 100; i++) {
+            let galaxy = createGalaxy();
+            scene.add(galaxy);
+        }
+
+        // Create eternal light
+        let lightGeometry = new THREE.SphereGeometry(400, 64, 64);
+        let lightMaterial = new THREE.MeshBasicMaterial({ color: 0xffffff, emissive: 0xffffff, transparent: true, opacity: 0.8 });
+        let eternalLight = new THREE.Mesh(lightGeometry, lightMaterial);
+        eternalLight.position.set(0, 0, -5000);
+        scene.add(eternalLight);
+
+        // Animation
+        camera.position.z = 1;
+        let speed = 2;
+        let zoomIn = true;
+        function animate() {
+            requestAnimationFrame(animate);
+            stars.rotation.x += 0.0003;
+            stars.rotation.y += 0.0003;
+
+            if (zoomIn) {
+                camera.position.z -= speed;
+                speed += 0.05;
+                if (camera.position.z <= -4900) {
+                    zoomIn = false;
+                    document.getElementById('website-container').style.display = 'block';
+                }
+            }
+
+            renderer.render(scene, camera);
+        }
+        animate();
+
+        // Handle window resize
+        window.addEventListener('resize', () => {
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+        });
     </script>
 </body>
-
 </html>
