--- a/if.html
+++ b/if.html
@@ -31,9 +31,9 @@
 </head>
 <body>
 
-    <a href="i.html" class="button">Button 1</a>
-    <a href="f.html" class="button">Button 2</a>
-    <a href="m.html" class="button">Button 3</a>
+    <a href="i/i.html" class="button">Button 1</a>
+    <a href="f/f.html" class="button">Button 2</a>
+    <a href="m/m.html" class="button">Button 3</a>
 
 </body>
 </html>
