--- a/f/6.html
+++ b/f/6.html
@@ -137,6 +137,7 @@ header p{
         </header>
         <div class="results"></div>
     </div>
+    <button id="enterButton">Enter button</button>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -177,6 +178,7 @@ header p{
         });
     }
 });
+
     </script>
 </body>
 
