--- a/m/m.html
+++ b/m/m.html
@@ -24,7 +24,9 @@
     </header>
     
     <iframe style="border: 0;" src="7.html" height="550" width="450"></iframe>
-    
+    <iframe style="border: 0;" src="d.html" height="550" width="450"></iframe>
+    <iframe style="border: 0;" src="e.html" height="550" width="450"></iframe>
+    <iframe style="border: 0;" src="f.html" height="550" width="450"></iframe>
 
 
 </body>
