--- a/f/f.html
+++ b/f/f.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+      body{
+        width: 450;
+      }
  header {
 	display: flex;
 	flex-direction: column;
