--- a/tools/vid.html
+++ b/tools/vid.html
@@ -3,23 +3,128 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Firebase Chat</title>
     <style>
-        body{
-            background-color: black;
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+            margin: 0;
         }
-        iframe{
-            width: 100%;
-            
-
+        .chat-container {
+            background-color: #fff;
+            width: 300px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            padding: 15px;
+            display: flex;
+            flex-direction: column;
+            height: 400px;
+            overflow: hidden;
+        }
+        .messages {
+            flex: 1;
+            overflow-y: auto;
+            margin-bottom: 10px;
+            padding: 5px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+        .message {
+            background-color: #f1f1f1;
+            padding: 5px 10px;
+            border-radius: 5px;
+            margin-bottom: 5px;
+        }
+        input[type="text"] {
+            padding: 10px;
+            width: calc(100% - 20px);
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            margin-bottom: 5px;
+        }
+        button {
+            padding: 10px;
+            background-color: #4CAF50;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #45a049;
         }
     </style>
 </head>
 <body>
-    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/gR3g4pIwKRk?si=0ezFoeArVYELf17e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<script>
-    alert('Currently i have videos of my old deleted channel // new content will come soon //AKD')
-</script>
+    <div class="chat-container">
+        <div class="messages" id="messages"></div>
+        <input type="text" id="messageInput" placeholder="Type your message...">
+        <button onclick="sendMessage()">Send</button>
+    </div>
 
+    <!-- Firebase SDK -->
+    <script type="module">
+        // Import the functions you need from the SDKs
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
+        import { getDatabase, ref, push, onChildAdded } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-database.js";
+
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyADJwSudN3vMRicU7QdobwUT_55h1ughww",
+            authDomain: "arrr-13914.firebaseapp.com",
+            databaseURL: "https://arrr-13914-default-rtdb.firebaseio.com",
+            projectId: "arrr-13914",
+            storageBucket: "arrr-13914.appspot.com",
+            messagingSenderId: "695438168915",
+            appId: "1:695438168915:web:094bf90d0621de702347a6",
+            measurementId: "G-CNSQQBD7FM"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const database = getDatabase(app);
+
+        // Function to send a message
+        function sendMessage() {
+            const messageInput = document.getElementById("messageInput");
+            const messageText = messageInput.value;
+
+            if (messageText === "") {
+                alert("Please enter a message.");
+                return;
+            }
+
+            // Push the message to the Firebase Realtime Database
+            const messagesRef = ref(database, "messages");
+            push(messagesRef, {
+                text: messageText,
+                timestamp: Date.now()
+            });
+
+            // Clear the input field
+            messageInput.value = "";
+        }
+
+        // Function to display messages
+        function displayMessage(messageText) {
+            const messagesDiv = document.getElementById("messages");
+            const messageElement = document.createElement("div");
+            messageElement.classList.add("message");
+            messageElement.textContent = messageText;
+            messagesDiv.appendChild(messageElement);
+            messagesDiv.scrollTop = messagesDiv.scrollHeight; // Scroll to the bottom
+        }
+
+        // Listen for new messages added to the database
+        const messagesRef = ref(database, "messages");
+        onChildAdded(messagesRef, (data) => {
+            const message = data.val();
+            displayMessage(message.text);
+        });
+    </script>
 </body>
 </html>
