--- a/tools/1.html
+++ b/tools/1.html
@@ -195,8 +195,8 @@ const songsList = [
     },
     {
         name: "Arjun's playlist favorites",
-        artist: "huma huma",
-        src: "1/a(6).mp3",
+        artist: "royalty",
+        src: "1/m.mp3",
         cover: "1/1.jpg"
     },
     {
